--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 	display: block;
 	float:center;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
-	background-image: url("bg.jpg");
+	background-image: url("http://i.imgur.com/DtFKwu7.jpg?1");
 	background-repeat: no-repeat;
 	background-position: 100% 100%.;
 	background-attachment: fixed;
